Fixed some header and Footer alignments

--- a/frontEnd/src/Components/Footer/Footer.scss
+++ b/frontEnd/src/Components/Footer/Footer.scss
@@ -18,4 +18,10 @@ footer {
     display: flex;
     gap: 2rem;
   }
+
+  .footer__copyright {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
 }
