--- a/frontEnd/src/Components/Header/Header.scss
+++ b/frontEnd/src/Components/Header/Header.scss
@@ -9,7 +9,7 @@ header {
   position: fixed;
   top: 0;
   
-    .container-header {
+    navbar {
       margin: globals.$m-3 0;
       display: flex;
       justify-content: space-between;
